@@ -3,7 +3,7 @@ description = Beheer de gegevens per klas en genereer een klasbeeld van de leerl
 core = 7.x
 package = argus - a Quality control extension
 project status url = http://www.projectargus.be/release-history
-version = 7.x-3.4
+version = 7.x-3.5
 project = argus_klasbeheer
 files[] = argus_klasbeheer.info
 files[] = argus_klasbeheer.install
