@@ -4,7 +4,7 @@ core = 7.x
 package = argus - a Quality control extension
 project status url = http://www.projectargus.be/release-history
 datestamp = 1423254007
-version = 7.x-3.5
+version = 7.x-3.6
 project = argus_meldingen
 files[] = argus_meldingen.install
 files[] = argus_meldingen.module
